--- a/playbook.yaml
+++ b/playbook.yaml
@@ -1,11 +1,88 @@
 ---
-- name: Run a shell command on target hosts
+- name: Find IBM Cloud Monitoring Instance with Platform Metrics
   hosts: localhost
-  tasks:
-    - name: Run 'uptime' command
-      shell: ibmcloud login
-      register: uptime_output
+  connection: local
+  gather_facts: false # No need to gather facts for localhost operations
 
-    - name: Print the output
-      debug:
-        msg: "{{ uptime_output.stdout }}"
+  vars:
+    # Retrieve the IBM Cloud API Key from the environment variable.
+    # Ensure 'API_KEY' is set in your environment before running this playbook.
+    ibmcloud_api_key: "{{ lookup('env', 'API_KEY') }}"
+    # Define the part of the instance name/CRN to search for (e.g., "sysdig-monitor")
+    target_instance_filter: "sysdig-monitor"
+
+  tasks:
+    - name: Check if 'jq' command is available
+      ansible.builtin.command: which jq
+      register: jq_check
+      ignore_errors: true # Allow task to fail without stopping the playbook immediately
+      changed_when: false # This command does not change system state
+
+    - name: Fail if 'jq' is not installed
+      ansible.builtin.fail:
+        msg: "Error: 'jq' is not installed. Please install 'jq' to run this playbook (e.g., sudo apt-get install jq)."
+      when: jq_check.rc != 0
+
+    - name: Check if IBM Cloud API Key is provided
+      ansible.builtin.fail:
+        msg: "Error: The 'API_KEY' environment variable is not set. Please set it before running the playbook."
+      when: ibmcloud_api_key is not defined or ibmcloud_api_key | length == 0
+
+    - name: Log in to IBM Cloud
+      # Use the 'shell' module for commands that involve piping or complex shell features.
+      # Redirect stdout/stderr to /dev/null to keep the output clean.
+      # 'no_log: true' prevents the API key from appearing in Ansible logs.
+      ansible.builtin.shell: |
+        ibmcloud login --apikey "{{ ibmcloud_api_key }}" --no-region >/dev/null 2>&1
+      register: ibmcloud_login_result
+      changed_when: false
+      # Fail if the login command returns a non-zero exit code or specific error messages.
+      failed_when: ibmcloud_login_result.rc != 0 or
+                   'FAILED' in ibmcloud_login_result.stderr or
+                   'Error' in ibmcloud_login_result.stderr
+      environment:
+        # Pass the API key as an environment variable to the shell command.
+        API_KEY: "{{ ibmcloud_api_key }}"
+      no_log: true
+
+    - name: Display IBM Cloud login success message
+      ansible.builtin.debug:
+        msg: "Authentication successful."
+      when: ibmcloud_login_result.rc == 0
+
+    - name: List IBM Cloud service instances and filter for Cloud Monitoring instance
+      # Execute the 'ibmcloud resource service-instances' command and pipe its JSON output to 'jq'.
+      # The 'jq' filter matches instances based on the specified criteria (sysdig-monitor, active, platform metrics enabled).
+      ansible.builtin.shell: |
+        ibmcloud resource service-instances --output JSON | \
+        jq -r '
+            .[] | select(
+                ((.id | test("{{ target_instance_filter }}"; "i")) or (.crn | test("{{ target_instance_filter }}"; "i"))) and
+                .state == "active" and
+                .parameters.default_receiver == false
+            ) |
+            "Instance Name: \(.name)\nInstance ID:   \(.guid)\nRegion:        \(.region_id)\n"
+        '
+      register: found_instance_result
+      changed_when: false
+      # 'failed_when: false' because 'jq' will return an empty string (not an error) if no match is found.
+      failed_when: false
+
+    - name: Display found IBM Cloud Monitoring instances
+      ansible.builtin.debug:
+        msg: |
+          Active IBM Cloud Monitoring instances with platform metrics enabled were found:
+          {{ found_instance_result.stdout }}
+      when: found_instance_result.stdout | length > 0
+
+    - name: Inform if no IBM Cloud Monitoring instances were found
+      ansible.builtin.debug:
+        msg: "No active IBM Cloud Monitoring instances with platform metrics enabled were found."
+      when: found_instance_result.stdout | length == 0
+
+    - name: Log out of IBM Cloud
+      # Perform logout as a cleanup step.
+      ansible.builtin.shell: |
+        ibmcloud logout >/dev/null 2>&1
+      changed_when: false
+      failed_when: false # Logout might fail if already logged out or session expired, but it shouldn't stop the playbook.
