--- a/playbook.yaml
+++ b/playbook.yaml
@@ -74,7 +74,7 @@
       # Use 'jq' filter on the 'content' (JSON string) from the uri module
       set_fact:
         found_tenants_formatted: |
-          {{ api_response_raw.content | from_json | json_query('tenants[?(@.type == `object` && (.crn | split(":")[5] | lower | contains(`' + region.lower() + '`)) && (.crn | lower | contains(`logs-router`)))] | [].{name: name, id: id, region: crn | split(":")[5], log_sink_crn: targets[0].log_sink_crn || "N/A", crn: crn}') }}
+          {{ api_response_raw.content | from_json | json_query('tenants[?(@.type == `object` && (@.crn | split(`:`, 5)) == `' + target_region.lower() + `' && (@.crn | lower | contains(`logs-router`)))] | [].{name: name, id: id, region: (@.crn | split(`:`, 5)), log_sink_crn: targets[0].log_sink_crn || "N/A", crn: crn}') }}
 
     - name: Display found IBM Cloud Log Routing tenants
       ansible.builtin.debug:
