--- a/playbook.yaml
+++ b/playbook.yaml
@@ -62,24 +62,27 @@
             ibmcloud resource service-instances --output JSON
           register: ibmcloud_instances
           changed_when: false
-                
+        
         - name: Filter for Cloud Monitoring instances with platform metrics
           set_fact:
             filtered_instances: "{{ ibmcloud_instances.stdout | from_json | json_query(query) }}"
           vars:
             query: "[?((contains(id, '{{ target_instance_filter }}')) || (contains(crn, '{{ target_instance_filter }}'))) && state=='active' && parameters.default_receiver==`true`].{Name: name, ID: guid, Region: region_id}"
-
+        
         - name: Fail if found IBM Cloud Monitoring instances with platform metrics
           ansible.builtin.fail:
             msg: |
               Active IBM Cloud Monitoring instances with platform metrics enabled were found:
-              {{ found_instance_result.stdout }}
-          when: found_instance_result.stdout | length > 0
-
+              {{ filtered_instances }}
+          when: filtered_instances | length > 0
+        
         - name: Inform if no IBM Cloud Monitoring instances were found
           ansible.builtin.debug:
             msg: "No active IBM Cloud Monitoring instances with platform metrics enabled were found."
-          when: found_instance_result.stdout | length == 0
+          when: filtered_instances | length == 0
+
+
+
       when: is_enabled
       rescue:
         - name: Fail with a specific error message
